Game design created

--- a/CatchKenny/CatchKenny/Base.lproj/Main.storyboard
+++ b/CatchKenny/CatchKenny/Base.lproj/Main.storyboard
@@ -1,24 +1,158 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="CatchKenny" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KennyMcCormick" translatesAutoresizingMaskIntoConstraints="NO" id="QOS-Jd-jej">
+                                <rect key="frame" x="20" y="287" width="131" height="116"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="131" id="ag1-jQ-AZw"/>
+                                    <constraint firstAttribute="height" constant="116" id="waI-5A-ixu"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="KennyMcCormick" translatesAutoresizingMaskIntoConstraints="NO" id="1ow-4x-P0A">
+                                <rect key="frame" x="142" y="287" width="131" height="116"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KennyMcCormick" translatesAutoresizingMaskIntoConstraints="NO" id="W2E-94-NJJ">
+                                <rect key="frame" x="263" y="287" width="131" height="116"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="131" id="NnF-IO-u64"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KennyMcCormick" translatesAutoresizingMaskIntoConstraints="NO" id="Bqi-SB-gcy">
+                                <rect key="frame" x="20" y="411" width="131" height="116"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="116" id="Wnd-af-ZeL"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="KennyMcCormick" translatesAutoresizingMaskIntoConstraints="NO" id="l9z-uC-CTt">
+                                <rect key="frame" x="142" y="411" width="131" height="116"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KennyMcCormick" translatesAutoresizingMaskIntoConstraints="NO" id="F4M-F5-tyz">
+                                <rect key="frame" x="263" y="411" width="131" height="116"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KennyMcCormick" translatesAutoresizingMaskIntoConstraints="NO" id="gDm-yF-J1B">
+                                <rect key="frame" x="20" y="535" width="131" height="116"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="116" id="8SO-t7-Nrp"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="KennyMcCormick" translatesAutoresizingMaskIntoConstraints="NO" id="sZT-uM-YPz">
+                                <rect key="frame" x="142" y="535" width="131" height="116"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KennyMcCormick" translatesAutoresizingMaskIntoConstraints="NO" id="Eld-x6-0tz">
+                                <rect key="frame" x="263" y="535" width="131" height="116"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJ7-Gf-Qwt">
+                                <rect key="frame" x="125" y="64" width="189" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="3By-91-h7g"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Score : 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQ7-4z-fLG">
+                                <rect key="frame" x="125" y="126" width="189" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="LiW-Rt-qde"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Highscore : 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kkQ-EP-aHn">
+                                <rect key="frame" x="113" y="710" width="189" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="43g-wl-gdJ"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Bqi-SB-gcy" firstAttribute="trailing" secondItem="gDm-yF-J1B" secondAttribute="trailing" id="1DT-I2-otn"/>
+                            <constraint firstItem="F4M-F5-tyz" firstAttribute="trailing" secondItem="Eld-x6-0tz" secondAttribute="trailing" id="43G-4V-JAh"/>
+                            <constraint firstItem="gDm-yF-J1B" firstAttribute="bottom" secondItem="sZT-uM-YPz" secondAttribute="bottom" id="CyD-zs-hw7"/>
+                            <constraint firstItem="l9z-uC-CTt" firstAttribute="leading" secondItem="sZT-uM-YPz" secondAttribute="leading" id="G5e-Tg-kJ5"/>
+                            <constraint firstItem="1ow-4x-P0A" firstAttribute="trailing" secondItem="l9z-uC-CTt" secondAttribute="trailing" id="Hpa-jP-e1q"/>
+                            <constraint firstItem="Bqi-SB-gcy" firstAttribute="top" secondItem="1ow-4x-P0A" secondAttribute="bottom" constant="8" id="I1S-5H-Ngg"/>
+                            <constraint firstItem="1ow-4x-P0A" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="I7m-Og-p5T"/>
+                            <constraint firstItem="Bqi-SB-gcy" firstAttribute="leading" secondItem="gDm-yF-J1B" secondAttribute="leading" id="K7A-gl-b9X"/>
+                            <constraint firstItem="l9z-uC-CTt" firstAttribute="trailing" secondItem="sZT-uM-YPz" secondAttribute="trailing" id="LzS-5F-WdB"/>
+                            <constraint firstItem="l9z-uC-CTt" firstAttribute="bottom" secondItem="F4M-F5-tyz" secondAttribute="bottom" id="NNw-Yu-Kna"/>
+                            <constraint firstItem="QOS-Jd-jej" firstAttribute="leading" secondItem="Bqi-SB-gcy" secondAttribute="leading" id="NaK-10-2JH"/>
+                            <constraint firstItem="l9z-uC-CTt" firstAttribute="top" secondItem="F4M-F5-tyz" secondAttribute="top" id="OFM-Ax-elc"/>
+                            <constraint firstItem="vQ7-4z-fLG" firstAttribute="top" secondItem="PJ7-Gf-Qwt" secondAttribute="bottom" constant="8" id="OkV-Bp-qGP"/>
+                            <constraint firstItem="QOS-Jd-jej" firstAttribute="top" secondItem="1ow-4x-P0A" secondAttribute="top" id="RaR-vk-nNx"/>
+                            <constraint firstItem="kkQ-EP-aHn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="113" id="Rt1-Cn-P0B"/>
+                            <constraint firstItem="QOS-Jd-jej" firstAttribute="bottom" secondItem="1ow-4x-P0A" secondAttribute="bottom" id="Rtc-mD-RME"/>
+                            <constraint firstItem="W2E-94-NJJ" firstAttribute="leading" secondItem="F4M-F5-tyz" secondAttribute="leading" id="SPE-Jk-mwX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="kkQ-EP-aHn" secondAttribute="bottom" constant="98" id="Tjm-ZS-n89"/>
+                            <constraint firstItem="sZT-uM-YPz" firstAttribute="top" secondItem="Eld-x6-0tz" secondAttribute="top" id="UWa-DH-Xah"/>
+                            <constraint firstItem="PJ7-Gf-Qwt" firstAttribute="leading" secondItem="vQ7-4z-fLG" secondAttribute="leading" id="W9f-Ti-0jO"/>
+                            <constraint firstItem="PJ7-Gf-Qwt" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="125" id="Wdh-KC-Y4o"/>
+                            <constraint firstItem="Bqi-SB-gcy" firstAttribute="bottom" secondItem="l9z-uC-CTt" secondAttribute="bottom" id="Yav-HM-rf1"/>
+                            <constraint firstItem="1ow-4x-P0A" firstAttribute="leading" secondItem="l9z-uC-CTt" secondAttribute="leading" id="ZxZ-2g-BXB"/>
+                            <constraint firstItem="QOS-Jd-jej" firstAttribute="trailing" secondItem="Bqi-SB-gcy" secondAttribute="trailing" id="ehE-AJ-g5G"/>
+                            <constraint firstItem="1ow-4x-P0A" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="142" id="eoZ-ft-g9a"/>
+                            <constraint firstItem="sZT-uM-YPz" firstAttribute="bottom" secondItem="Eld-x6-0tz" secondAttribute="bottom" id="g73-eh-ccJ"/>
+                            <constraint firstItem="F4M-F5-tyz" firstAttribute="leading" secondItem="Eld-x6-0tz" secondAttribute="leading" id="gNC-l8-33t"/>
+                            <constraint firstItem="W2E-94-NJJ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="gTt-Kw-fuS"/>
+                            <constraint firstItem="1ow-4x-P0A" firstAttribute="bottom" secondItem="W2E-94-NJJ" secondAttribute="bottom" id="kPa-wO-D0U"/>
+                            <constraint firstItem="gDm-yF-J1B" firstAttribute="top" secondItem="sZT-uM-YPz" secondAttribute="top" id="kda-Gf-t0h"/>
+                            <constraint firstItem="sZT-uM-YPz" firstAttribute="centerX" secondItem="kkQ-EP-aHn" secondAttribute="centerX" id="m9A-16-Yho"/>
+                            <constraint firstItem="PJ7-Gf-Qwt" firstAttribute="trailing" secondItem="vQ7-4z-fLG" secondAttribute="trailing" id="odE-dL-Z9Y"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PJ7-Gf-Qwt" secondAttribute="trailing" constant="100" id="pUd-jv-YiI"/>
+                            <constraint firstItem="Bqi-SB-gcy" firstAttribute="top" secondItem="l9z-uC-CTt" secondAttribute="top" id="plb-G4-NM3"/>
+                            <constraint firstItem="QOS-Jd-jej" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="tft-Fr-1Eb"/>
+                            <constraint firstItem="1ow-4x-P0A" firstAttribute="top" secondItem="W2E-94-NJJ" secondAttribute="top" id="uby-Aq-l5b"/>
+                            <constraint firstItem="gDm-yF-J1B" firstAttribute="top" secondItem="l9z-uC-CTt" secondAttribute="bottom" constant="8" id="vte-mk-19Z"/>
+                            <constraint firstItem="kkQ-EP-aHn" firstAttribute="top" secondItem="gDm-yF-J1B" secondAttribute="bottom" constant="59" id="xI7-DQ-lFY"/>
+                            <constraint firstItem="PJ7-Gf-Qwt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="xNP-PO-lYP"/>
+                            <constraint firstItem="W2E-94-NJJ" firstAttribute="trailing" secondItem="F4M-F5-tyz" secondAttribute="trailing" id="xPX-mn-vSU"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="HighscoreLabel" destination="kkQ-EP-aHn" id="GGa-kL-t6d"/>
+                        <outlet property="ScoreLabel" destination="vQ7-4z-fLG" id="QqL-gK-c95"/>
+                        <outlet property="TimeLabel" destination="PJ7-Gf-Qwt" id="SVO-Nz-0xP"/>
+                        <outlet property="kenny1" destination="QOS-Jd-jej" id="Bkn-uI-1FY"/>
+                        <outlet property="kenny2" destination="1ow-4x-P0A" id="cY7-sS-6gJ"/>
+                        <outlet property="kenny3" destination="W2E-94-NJJ" id="nhc-a0-Nyk"/>
+                        <outlet property="kenny4" destination="Bqi-SB-gcy" id="XDh-qC-CS1"/>
+                        <outlet property="kenny5" destination="l9z-uC-CTt" id="1Yp-gS-HsO"/>
+                        <outlet property="kenny6" destination="F4M-F5-tyz" id="wPQ-1i-na6"/>
+                        <outlet property="kenny7" destination="gDm-yF-J1B" id="hZf-9A-shA"/>
+                        <outlet property="kenny8" destination="sZT-uM-YPz" id="9qx-0t-jBM"/>
+                        <outlet property="kenny9" destination="Eld-x6-0tz" id="kr9-xk-g1D"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="131.8840579710145" y="116.51785714285714"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="KennyMcCormick" width="667" height="903"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
